chapter 07/service_external.yaml
apiVersion: v1
kind: Service 
metadata:
  name: demo-ext-service
spec:
  type: ExternalName
  externalName: db.example.com
