chapter 07/service_headless.yaml
apiVersion: v1
kind: Service 
metadata:
  name: demo-db
  namespace: database
spec:
  clusterIP: None
  selector: 
    app: demo-db
  ports:
  - port: 5432
    targetPort: 5432
