chapter 07/service_loadbalancer.yaml
apiVersion: v1
kind: Service 
metadata:
  name: demo-service
spec:
  type: LoadBalancer
  selector: 
    app: demo-app
  ports:
  - port: 80
    targetPort: 8080
