chapter 07/service_nodeport.yaml
apiVersion: v1
kind: Service 
metadata:
  name: demo-service
spec:
  type: NodePort
  selector: 
    app: demo-app
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30090
